NEWS - OpenPrinting CUPS Filters v1.20.4 - 2018-07-12
-----------------------------------------------------

CHANGES IN V1.21.0

	- libcupsfilters, cups-browsed, driverless, bannertopdf,
          foomatic-rip, pdftops, pdftoraster, rastertops,
          rastertoescpx, sys5ippprinter, beh: Fixed Coverity Scan
          issues. Thanks to Zdenek Dohnal (zdohnal at redhat dot com)
          for the tests and the patches.
	- bannertopdf: Switched over from using Poppler to using QPDF
	  for generating the PDF pages. With Poppler unstable APIs
	  were used which were subject to change. Thanks to Sahil
	  Arora for this project in the Google Summer of Code 2018
	  (Pull request #25).
	- cups-browsed: Manually defined clusters ("Cluster" directive
	  in cups-browsed.conf) caused cups-browsed to crash.

CHANGES IN V1.20.4

	- README: Added link to Issue Tracker on GitHub.
	- gstoraster: Removed unneeded "if"s. Thanks to Laurent
	  Martelli (martellilaurent at gmail dot com) for the patch
	  (Ghostscript bug #692705).
	- cups-browsed: When checking whether there is already a local
	  print queue with the same URI as the one of the discovered
	  printer, consider also as equal URI if the URIs only differ
	  by use of IPP or IPPS and/or use of HTTPS port 443 instead
	  of IPP port 631.
	- cups-browsed: Also upgrade from ipp: to ipps: when the ipps:
	  URI is on HTTPS port 443 instead of IPP port 631. This is
	  common on IPP network printers.
	- pdftopdf: Removed support for hardware-implemented reversing
	  of page order in PostScript printers. It was once not
	  correctly implemented in cups-filters and second, such
	  printers are extremely rare, and on Gutenprint PPDs with
	  pseudo OutputOrder option hardware reversing was even
	  wrongly assumed (Issue #47).
	- pdftopdf: Accept option "output-order=normal/reverse" for
	  reversing page order (Issue #47) and also "page-delivery=
	  same-order/reverse-order" (CUPS Issue #5340).