@@ -3,6 +3,10 @@ NEWS - OpenPrinting CUPS Filters v1.20.4 - 2018-07-12
 
 CHANGES IN V1.21.0
 
+	- libcupsfilters: When generating a PPD for driverless
+	  printing on a remote IPP printer, make pdftopdf not being
+	  run by the local queue if the remote queue is a CUPS queue
+	  to avoid running pdftopdf twice (CUPS Issue #5361).
 	- libcupsfilters, cups-browsed, driverless, bannertopdf,
           foomatic-rip, pdftops, pdftoraster, rastertops,
           rastertoescpx, sys5ippprinter, beh: Fixed Coverity Scan
